--- a/03_ToDoList/todoList.html
+++ b/03_ToDoList/todoList.html
@@ -9,6 +9,11 @@
 <body>
     <div class="container">
         <h1>To-Do List</h1>
+        <div class="filter-buttons">
+            <button onclick="filterTasks('all')">전체</button>
+            <button onclick="filterTasks('completed')">완료</button>
+            <button onclick="filterTasks('uncompleted')">미완료</button>
+        </div>
         <div class="input-wrapper">
             <input type="text" id="taskInput" placeholder="할 일 추가하기">
             <div class="select-wrapper">
